# formatto

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.md  manifest.json  nodemon-test-wasm.json  nodemon-ts.json  nodemon-wasm.json  nodemon.json  package-lock.json  package.json  rollup.config.js  styles.css  tsconfig.json
.github/: CONTRIBUTING.md
src/: main.ts  (+1 more)
wasm/: Cargo.toml
wasm/src/: format_tools.rs  lib.rs  macro_rules.rs  option_schema.rs  parsing.rs  parsing_tools.rs  setting_schema.rs  setting_types.rs  testing.rs  tests.rs  token_types.rs  tools.rs  utils.rs
wasm/src/parsing/: parsing_tools.rs
wasm/src/testing/: formatting.rs  parsing.rs  utils.rs
wasm/src/testing/formatting/: callouts.rs  code_blocks.rs  properties.rs
wasm/src/testing/formatting/headings/: alternate_headings.rs  alternative_headings.rs  hash_headings.rs
wasm/src/testing/parsing/: code_blocks.rs  contents.rs  general.rs
wasm/src/testing/parsing/code_blocks/: invalid_input.rs
wasm/src/testing/parsing/get_sections/: callouts.rs  code_blocks.rs  contents.rs  general.rs  properties.rs
wasm/src/testing/parsing/get_sections/headings/: alternate_headings.rs  alternative_headings.rs  hash_headings.rs
wasm/src/testing/parsing/headings/: alternative_headings.rs  get_top_heading_level.rs  hash_headings.rs
wasm/src/testing/utils/: get_locale_string.rs
wasm/src/tools/: formatting.rs  parsing.rs  tokens.rs
wasm/src/tools/parsing/: contents.rs  headings.rs
wasm/src/types/: setting_types.rs  token_types.rs
wasm/tests/: web.rs
(+48 files in other folders)
