[package]
name = "formatto-wasm"
description = "Wasm bindings for formatto."
version = "1.0.5"
authors = ["decaplanet <contact@decaplanet.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
development = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
